--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- changed to nav for nav-bar -->
         <nav>
             <ul>
                 <li>
